Score still needs fixing. Score spacing still needs work.

--- a/v4/scoreboardv4.css
+++ b/v4/scoreboardv4.css
@@ -57,11 +57,12 @@ td {
 }
 
 .date {
-	text-indent: 7px;
+	text-align: center;
 }
 .game {
-	text-indent: 22px;
+	text-align: center;
 }
 .score {
-	text-indent: 20px;
+	text-indent: -10px;
+	text-align: center;
 }
